# hr-scrapper-rust-parser

./: .gitignore  README.md
html_parser/: .env  Cargo.toml  docker-compose.yml
html_parser/migrations/2024-05-15-002526_create_records/: down.sql  up.sql
html_parser/migrations/2024-05-16-003039_add_html_hash_to_pages/: down.sql  up.sql
html_parser/src/: config.json  config_test.json  db_operations.rs  io_helper.rs  log4rs.yaml  main.rs  models.rs  output.json  parser.rs  schema.rs  serve.rs  utils.rs
html_parser/src/elements/: about.html  job.html  job_list.html  subtitle.html
html_parser/src/html_pages/: test.html
