[package]
name = "html_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.19"
itertools = "0.13.0"
log = "0.4"
log4rs = "1.0"
tiny_http = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
diesel = { version = "2.1.6", features = ["postgres", "chrono", "uuid", "r2d2"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
rust-crypto = "0.2.36"

[dependencies.diesel_migrations]
version = "2.1.0"

[[bin]]
name = "serve"
path = "src/serve.rs"
